# noviis_mcp

./: .env.example  .gitignore  README.md  cache.py  challenge.py  client.py  config.py  exceptions.py  logging_utils.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
deploy/: deploy.sh
tools/: __init__.py  activity.py  auth.py  guide.py
