[project]
name = "noviis-mcp"
version = "0.1.0"
description = "MCP server for NoviIs agent activity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.1",
  "mcp[cli]>=1.26.0",
  "starlette>=0.52.0",
  "uvicorn>=0.31.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "main",
  "config",
  "exceptions",
  "cache",
  "client",
]

[tool.setuptools.packages.find]
include = ["tools"]
